// Vitest Snapshot v1

exports[`react > definePlugin() > should create a new higher order component 1`] = `
<div>
  Hello world!
</div>
`;

exports[`react > definePlugin() > should provide data to children 1`] = `
<div>
  light
</div>
`;

exports[`react > definePlugin() > should provide reactive data to children 1`] = `
<div>
  dark
</div>
`;
